# agent-swarm

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_KR.md  RELEASE_CHECKLIST.md  TEST_GUIDE.md  pyproject.toml  test_agent_swarm.py
agent_swarm/: __init__.py  __main__.py  attention.py  auto_tools.py  cache.py  causal.py  context_diversity.py  context_filter.py  convergence.py  core.py  durable.py  events.py  genetics.py  hrm.py  llm_connectors.py  mcp_server.py  memory.py  metrics.py  migrate.py  models.py  ontology.py  packs.py  playbooks.py  pro_client.py  progress.py  qa.py  result_export.py  retro.py  review.py  router.py  run_machine.py  safety.py  semantic_router.py  session.py  ship.py  skill_eval.py  skills.py  streaming.py  supervisor.py  telemetry.py  (+8 more)
docs_canonical/: ARCHITECTURE.md  EXECUTION_POLICY.md  ONTOLOGY_POLICY.md  PLAYBOOK_POLICY.md  PRODUCT_BOUNDARY.md  REPO_MAP.md  ROLE_POLICY.md  SKILL_EVOLUTION_POLICY.md  STYLEGUIDE.md  TASKS.md  TESTING.md  WORKFLOWS.md
examples/: 01_basic.py  02_playbook_ontology.py  03_production.py  04_competitor_analysis.py  05_approval_workflow.py  06_code_review_pipeline.py  07_pack_pm_workflow.py  08_operational_pipeline.py  09_hrm_orchestration.py  10_causal_debug.py  11_xsa_context.py  mcp_setup.md  with_claude.py  with_openai.py
policies/: execution_policy.yaml  ontology_policy.yaml  playbook_policy.yaml  role_policy.yaml  skill_evolution_policy.yaml
recipes/: README.md  _llm.py  bug_analysis.py  code_review.py  competitor_analysis.py  content_writer.py  research.py
tests/: test_all.py  (+33 more)
(+19 files in other folders)
